    FIXED: no or uninformative error message at packing to a readonly directory
    FIXED: crash at middle clicking on the last tab
    FIXED: KrSearch permissions panel placing bug
    FIXED: ftp port limit changed from 999 to 65535
    UPDATED: Czech translation (thanks to Martin Sixta)

1.30
======================
    ADDED: middle mouse button: click on a folder, and create a new tab.
    ADDED: middle mouse button: click on a tab, and close it
    FIXED: krarc QByteArray buffer freeing bug
    FIXED: mountman watches 'mount' instead of the directories
    FIXED: keyboard-shortcuts issues for new-tab(alt+ctrl+n), close-tab(alt+ctrl+c)
           and duplicate-tab(alt+ctrl+shift+n)
    FIXED: mountman FreeBSD bug (/etc/mtab does not exist in FreeBSD)
    FIXED: All files / Custom files. Executable was removed.
    FIXED: when selecting something from the combobox in "mark files" dialog, combo doesn't close immediatly
    FIXED: mark files dialog added the same selection more than once
    FIXED: disabled panel-types in konfigurator
    FIXED: font size problems with the Select dialog, and New Net Connection
    FIXED: mountman detects those devices as supermount, which are mounted and missing from fstab
    FIXED: mountman inserts '/dev/' before NFS shares and mounted devices which are missing from fstab
    FIXED: mountman does not watch readonly directories (mount can change its permissions!)
    FIXED: mountman does not stop dirwatch after close + memory leak
    FIXED: compare fix at directories with escape characters
    FIXED: Sorry - Archive test passed
    FIXED: FTP proxy bug (more than one @ characters in the URL)
    REMOVED: SortByExtention menu item (which did nothing)
    REMOVED: KrSearch-Help + Pack-Move into archive (did nothing)
    UPDATED: Dutch translation
    UPDATED: Danish translation
    UPDATED: Hungarian translation
    UPDATED: Italian translation
    UPDATED: Slovak translation

1.29-beta
======================