@@ -1,3 +1,4 @@
+    FIXED: crash at closing the progressbar window at packing
     FIXED: no or uninformative error message at packing to a readonly directory
     FIXED: crash at middle clicking on the last tab
     FIXED: KrSearch permissions panel placing bug
